# cscs-cpp-course

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  clang_format.yml
src/: CMakeLists.txt
src/02_02_generic_p1/: 01_templates.cpp  02_overload.cpp  02_templates.cpp  03_generics.cpp  04_variadics.cpp  CMakeLists.txt
